package com.example.Apoloplay;

import java.util.Date;

public class Music  {
    val title: String,
    val artist: String
    val publication_date: Date
    val duration: Float
}
