@startuml
'https://plantuml.com/class-diagram

hide circle
top to bottom direction
skinparam linetype ortho
title Domain Model Diagram (Reorganized)

class User {
    - name : String
    - address : String
    - phone_number : String
    - email : String
}

class Music {
    - name : String
    - publication_date : Date
    - duration : float
}

class Artist {
    - name : String
    - birthdate : Date
    - gender : String
}

class Playlist {
    - name : String
    - total_duration : float
}

class Album {
    - name : String
    - launch_date : Date
}

class Review {
    - rating : int
    - description : String
}

class PlaylistMusic {

}
class UserPlaylist {

}

User "1" -- "*" Playlist : creates
User "1" -- "*" Review : writes
Review "*" -- "1" Music : about
Artist "1" -- "*" Music : performs
Album "1" -- "*" Music : contains
Artist "1" -- "*" Album : produces
Playlist "1" -- "*" PlaylistMusic : contains
Music "1" -- "*" PlaylistMusic : included in
User "1" -- "*" UserPlaylist : subscribes
Playlist "1" -- "*" UserPlaylist : subscribed by

@enduml